<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
		android:id="@+id/title"
		android:gravity="center_horizontal"
		android:textSize="20px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/title"/>
	<TextView  
		android:id="@+id/myTextView1"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView1"/>    
	    <TextView  
		android:id="@+id/myTextView2"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView2"/>
	    <TextView  
		android:id="@+id/myTextView3"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView3"/>
	    <TextView
		android:id="@+id/myTextView4"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView4"/> 
	    <TextView  
		android:id="@+id/myTextView5"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView5"/>
	    <TextView  
		android:id="@+id/myTextView6"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView6"/>
	    <TextView  
		android:id="@+id/myTextView7"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView7"/>
	    <TextView  
		android:id="@+id/myTextView8"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView8"/> 
	    <TextView  
		android:id="@+id/myTextView9"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView9"/> 
	    <TextView  
		android:id="@+id/myTextView10"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView10"/>    
	    <TextView  
		android:id="@+id/myTextView11"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView11"/> 
	    <TextView  
		android:id="@+id/myTextView12"
		android:textSize="18px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/myTextView12"/>
</LinearLayout>

